[gd_scene load_steps=4 format=3 uid="uid://bh0l7fobjqabc"]

[ext_resource type="Script" path="res://scenes/civ/civ.gd" id="1"]
[ext_resource type="Script" path="res://scenes/civ/DataVBox.gd" id="2"]
[ext_resource type="Script" path="res://scenes/civ/TechVBox.gd" id="3_6xmhj"]

[node name="Civ" type="Node2D"]
script = ExtResource( "1" )

[node name="StepButton" type="Button" parent="."]
offset_left = 331.0
offset_top = 56.0
offset_right = 399.0
offset_bottom = 87.0
text = "Do Step"

[node name="DataVBox" type="VBoxContainer" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 191.0
offset_bottom = 166.0
script = ExtResource( "2" )

[node name="NameLabel" type="Label" parent="DataVBox"]
offset_right = 141.0
offset_bottom = 26.0
text = "Civ name"

[node name="PopHBox" type="HBoxContainer" parent="DataVBox"]
offset_top = 30.0
offset_right = 141.0
offset_bottom = 56.0

[node name="PopLabel" type="Label" parent="DataVBox/PopHBox"]
offset_right = 89.0
offset_bottom = 26.0
text = "Population:"

[node name="PopNumberLabel" type="Label" parent="DataVBox/PopHBox"]
offset_left = 93.0
offset_right = 103.0
offset_bottom = 26.0
text = "0"

[node name="FoodHBox" type="HBoxContainer" parent="DataVBox"]
offset_top = 60.0
offset_right = 141.0
offset_bottom = 86.0

[node name="FoodLabel" type="Label" parent="DataVBox/FoodHBox"]
offset_right = 43.0
offset_bottom = 26.0
text = "Food:"

[node name="FoodIncomeLabel" type="Label" parent="DataVBox/FoodHBox"]
offset_left = 47.0
offset_right = 79.0
offset_bottom = 26.0
text = "+0 |"

[node name="FoodStockLabel" type="Label" parent="DataVBox/FoodHBox"]
offset_left = 83.0
offset_right = 108.0
offset_bottom = 26.0
text = "0/0"

[node name="ResearchHBox" type="HBoxContainer" parent="DataVBox"]
offset_top = 90.0
offset_right = 141.0
offset_bottom = 116.0

[node name="ResearchLabel" type="Label" parent="DataVBox/ResearchHBox"]
offset_right = 76.0
offset_bottom = 26.0
text = "Research:"

[node name="ResearchIncomeLabel" type="Label" parent="DataVBox/ResearchHBox"]
offset_left = 80.0
offset_right = 112.0
offset_bottom = 26.0
text = "+0 |"

[node name="ResearchStockLabel" type="Label" parent="DataVBox/ResearchHBox"]
offset_left = 116.0
offset_right = 141.0
offset_bottom = 26.0
text = "0/0"

[node name="TechVBox" type="VBoxContainer" parent="."]
offset_left = 50.0
offset_top = 191.0
offset_right = 90.0
offset_bottom = 231.0
theme_override_constants/separation = 6
script = ExtResource( "3_6xmhj" )

[node name="TechLabel" type="Label" parent="TechVBox"]
offset_right = 101.0
offset_bottom = 26.0
text = "Technologies"

[connection signal="pressed" from="StepButton" to="." method="_on_step_button_pressed"]
